# kitchenhelper

./: .env  .gitignore  Dockerfile  README.md  app.py  config.json  config.py  db.py  docker-compose.yml  dynamic_config.env  kitchenhelper.py  menu.json  menu.py  menu_picker.py  menu_utility.py  orders.db  printer_service.py  printutil.py  pyproject.toml  requirements.txt  run_win.bat  static_config.env  test.py  wsgi.py
.defaults/: active_menu.json  current_menu_path_template.json  default.env  default.json  default_settings.json
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-05-04-cleanroom-remake.md  2026-05-14-menu-editor-rework.md
docs/superpowers/specs/: 2026-05-04-cleanroom-remake-design.md  2026-05-14-menu-editor-rework-design.md
menu_list/: Haloch_2025.json  backup_menu.json  haardt_sept_25.json  haardt_sept_25.json.upload  qweqwe.json  test5525.json  test_2.json  test_3.json  test_4.json  test_menu.json
printing/: manager.py  receipts.py
routers/: displays.py  menus.py  orders.py  reports.py  settings.py
static/: theme.css
templates/: AAAAAAdaily_report.html  ShutdownSystem.html  base.html  customer_display.html  index.html  kitchen_display.html  menu_editor.html  menu_selector.html  menu_upload_confirm.html  orders.html  print.html  reports.html  settings.html
tests/: conftest.py  test_config.py  test_db.py  test_db_extended.py  test_menu.py  test_routes_displays.py  test_routes_menus.py  test_routes_orders.py  test_routes_reports.py  test_routes_settings.py  test_smoke.py
