[project]
name = "kitchenhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "python-escpos>=3.1",
    "werkzeug>=3.1.8",
]

[dependency-groups]
dev = []
